--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -45,7 +45,7 @@ a:hover {
     display: flex;
     flex-direction: row; /* stack columns horizontally by default */
     width: 95vw;
-    gap: 20px;
+    gap: 50px;
 }
 @media (max-width: 768px) {  /* stack vertically on smaller screens */
     .column-container {
@@ -312,7 +312,8 @@ table.align-top td {
     background-color: #000000;
     border: 1px solid #444;
     border-radius: 10px; /* Rounded corners */
-    margin-bottom: 20px; /* Margin to create separation from the next div */
+    margin-top: 10px;
+    margin-bottom: 15px;
     padding: 10px;
 }
 
