Fixed bug: Determining batches requires a recipe.

--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
     <h1>Attribute Setup</h1>
-    <p class="info">Stat or state of a character or item, such as Strength, or Poisoned.</p>
+    <p class="info">Stat or state of a character or item, such as Strength or Poisoned.</p>
     <p class="info">
         Alternatively, set up an item to represent a status
         that needs to be incremented,
