--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -9,9 +9,7 @@
 {% block content %}
     <h1>Character Setup</h1>
     <p class="info">
-        Participant in the story such as a team member, enemy, or NPC.
-        Typically performs actions of some kind.
-        Also, hauling vehicles.
+        Participant or vehicle that moves and performs actions.
     </p>
     <form method="post">
         <label for="character-name">Name:</label>
